# openbook-dex-me

assert-owner/: Cargo.toml
common/: Cargo.toml
dex/: Cargo.toml
dex/crank/: Cargo.toml
dex/fuzz/: Cargo.toml
dex/permissioned/: Cargo.toml
